[project]
name = "qronos"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite==0.21.0",
    "colorama==0.4.6",
    "fastapi==0.115.12",
    "numpy==2.0.2",
    "pandas==2.2.2",
    "pycryptodome==3.23.0",
    "pyotp==2.9.0",
    "python-jose==3.5.0",
    "python-multipart==0.0.20",
    "requests==2.32.3",
    "sqlalchemy==2.0.41",
    "uvicorn==0.34.2",
]

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py312"
exclude = [
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".git-rewrite",
  ".hg",
  ".ipynb_checkpoints",
  ".mypy_cache",
  ".nox",
  ".pants.d",
  ".pyenv",
  ".pytest_cache",
  ".pytype",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  ".vscode",
  "__pypackages__",
  "_build",
  "buck-out",
  "build",
  "dist",
  "node_modules",
  "site-packages",
  "venv",
  "**/migrations/",
  "**/__pycache__/",
  "**/node_modules/",
]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
ignore = ["E501", "E402"]
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = true
line-ending = "auto"
